@@ -14,6 +14,9 @@ AC_PREFIX_DEFAULT(/usr)
 
 AM_CONFIG_HEADER(include/ftsconfig-ac.h)
 
+dnl Guess the host
+AC_CANONICAL_HOST
+
 dnl Checks for programs.
 AC_PROG_CC
 if test "$ac_cv_prog_cc" = "no" ; then
@@ -25,6 +28,14 @@ AC_PROG_INSTALL
 dnl Check for libtool
 AC_LIBTOOL_DLOPEN
 AM_PROG_LIBTOOL
+
+dnl Big hack for Mac OS X (see ChangeLog about the -twolevel_namespace)
+case "$host" in
+powerpc-apple-darwin*)
+  sed -e 's/archive_cmds=\(.*CC \)/archive_cmds=\1 -flat_namespace /' -e 's/-undefined warning/-undefined suppress/' libtool > libtool.out 
+  mv libtool.out libtool
+;;
+esac
 
 dnl should go in platform (or at least to compiler) conditionned places
 CFLAGS="-Wall -Wno-unused"
@@ -60,41 +71,43 @@ changequote([,])dnl
 if test "$libtool_major_version" -le 1 -a "$libtool_minor_version" -lt 4 ; then DOT_LIBS=-L.libs ; fi
 AC_SUBST(DOT_LIBS)
 
-dnl Check for platform
-AC_CANONICAL_HOST
+dnl Set platform specifics
 case "$host" in
 i*86-pc-linux-gnu)
     dnl FIXME: must add conditionnal tests for ALSA
-    PLATFORM=linux ;
-    PLATFORM_PACKAGES="alsa oss unixdtd" ;
-    FTS_SYS_LIBS="-ldl -laudiofile -lpthread" ;
-    if test "$electric_fence" = "yes" ; then FTS_SYS_LIBS="-lefence $FTS_SYS_LIBS" ; fi ;
+    PLATFORM=linux
+    PLATFORM_PACKAGES="alsa oss unixdtd"
+    FTS_SYS_LIBS="-ldl -laudiofile -lpthread `test $electric_fence = yes && echo -lefence`"
+    CONFIG_FILE=config_linux.jmax
     ACX_C_RESTRICT
     ;;
 mips-sgi-irix6.5)
-    PLATFORM=sgi ;
-    PLATFORM_PACKAGES="sgi unixdtd" ;
-    FTS_SYS_LIBS="-ldl -laudiofile";
+    PLATFORM=sgi
+    PLATFORM_PACKAGES="sgi unixdtd"
+    FTS_SYS_LIBS="-ldl -laudiofile"
+    CONFIG_FILE=config_sgi.jmax
     ACX_C_RESTRICT
     ;;
 powerpc-apple-darwin*)
-    PLATFORM=macosx ;
+    PLATFORM=macosx
+    PLATFORM_PACKAGES="macosx"
+    CONFIG_FILE=config_macosx.jmax
     dnl Hack for problem of restrict finding (cc makes an error but does not return correct error code) 
     AC_DEFINE(restrict,)
-    PLATFORM_PACKAGES="macosx"  ;;
+    ;;
 esac
+
 
 dnl Check for debug
 AC_ARG_ENABLE(debug,
   [  --enable-debug[=value]   compile with debug [default=no]],
   debug="yes",
   debug="no")
-case "$debug" in
- yes)
+if test "$debug" = "yes"
+then
   CFLAGS="$CFLAGS -g"
   AC_DEFINE(DEBUG,1,[Define to enable debug])
-  ;;
-esac
+fi
 
 dnl Checks for libraries.
 AC_CHECK_LIB(m, sin)
@@ -113,6 +126,7 @@ AM_CONDITIONAL(MACOSX, echo "$host" | grep powerpc-apple-darwin)
 AC_SUBST(PLATFORM)
 AC_SUBST(PLATFORM_PACKAGES)
 AC_SUBST(FTS_SYS_LIBS)
+AC_SUBST(CONFIG_FILE)
 
 dnl Check installation directories
 if test "x${prefix}" = "xNONE"; then
