@@ -14,14 +14,5 @@ sync.c
 noinst_HEADERS=\
 control.h
 
-# Mac OS X libtool/twolevel_namespace mess (see ChangeLog)
-if MACOSX
-
-XLDFLAGS= -no-undefined -module
-XLIBADD= -L$(top_srcdir)/fts/.libs -lfts 
-
-endif
-
-libcontrol_la_LDFLAGS=$(XLDFLAGS)
-libcontrol_la_LIBADD=$(XLIBADD)
+libcontrol_la_LDFLAGS=-module
 
