@@ -13,23 +13,5 @@ noinst_HEADERS= \
 binop.h \
 math.h
 
-# Mac OS X libtool/twolevel_namespace mess (see ChangeLog)
-if MACOSX
-
-# This causes libtool to issue a warning and not to produce the .so 
-XLDFLAGS= -no-undefined -module
-XLIBADD= -L$(top_srcdir)/packages/data/c/src/.libs -ldata -L$(top_srcdir)/packages/utils/c/src/.libs -lutils -L$(top_srcdir)/fts/.libs -lfts 
-
-# So we add this explicitely !!!
-all-local: .libs/libmath.so
-
-.libs/libmath.so: $(libmath_la_OBJECTS) $(libmath_la_DEPENDENCIES)
-	cc -bundle -undefined error -o $@ $(libmath_la_OBJECTS) $(XLIBADD) -lm -lc 
-
-install-data-local: .libs/libmath.so
-	$(INSTALL_DATA) .libs/libmath.so $(DESTDIR)$(packagedir)/libmath.so
-endif
-
-libmath_la_LDFLAGS=$(XLDFLAGS)
-libmath_la_LIBADD=$(XLIBADD)
+libmath_la_LDFLAGS= -module
 
