@@ -27,25 +27,7 @@ samplepool.h \
 signal.h \
 wave.h
 
-# Mac OS X libtool/twolevel_namespace mess (see ChangeLog)
-if MACOSX
-
-# This causes libtool to issue a warning and not to produce the .so 
-XLDFLAGS= -no-undefined -module
-XLIBADD= -L$(top_srcdir)/packages/data/c/src/.libs -ldata -L$(top_srcdir)/packages/utils/c/src/.libs -lutils -L$(top_srcdir)/fts/.libs -lfts 
-
-# So we add this explicitely !!!
-all-local: .libs/libsignal.so
-
-.libs/libsignal.so: $(libsignal_la_OBJECTS) $(libsignal_la_DEPENDENCIES)
-	cc -bundle -undefined error -o $@ $(libsignal_la_OBJECTS) $(XLIBADD) -lm -lc 
-
-install-data-local: .libs/libsignal.so
-	$(INSTALL_DATA) .libs/libsignal.so $(DESTDIR)$(packagedir)/libsignal.so
-endif
-
-libsignal_la_LDFLAGS=$(XLDFLAGS)
-libsignal_la_LIBADD=$(XLIBADD)
+libsignal_la_LDFLAGS= -module
 
 
 
