@@ -1,3 +1,8 @@
+2002-03-14  François Déchelle  <dechelle@mac-dechelle.ircam.fr>
+
+	* fixed packages compilation problems on Mac OS X (libtool is edited
+	by configure+sed). Fixed wrong ENDIAN macro in utils.h
+
 2002-03-12  François Déchelle  <dechelle@mac-dechelle.ircam.fr>
 
 	* fts/audio.c: fixed code for installing default audio port class
